--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -88,4 +88,12 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/google_auth_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/auth_with_google_btn"
+        android:layout_margin="12dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
